@@ -1,98 +1,80 @@
 package faang.school.projectservice.service;
 
-import faang.school.projectservice.dto.project.ProjectDto;
+import faang.school.projectservice.dto.project.CreateProjectRequestDto;
+import faang.school.projectservice.dto.project.ProjectResponseDto;
 import faang.school.projectservice.mapper.ProjectMapper;
 import faang.school.projectservice.model.Project;
 import faang.school.projectservice.model.ProjectStatus;
 import faang.school.projectservice.model.ProjectVisibility;
 import faang.school.projectservice.repository.ProjectRepository;
 import lombok.RequiredArgsConstructor;
-import lombok.SneakyThrows;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Service
 @RequiredArgsConstructor
+@Service
 public class ProjectService {
 
     private final ProjectRepository projectRepository;
     private final ProjectMapper projectMapper;
 
-    public ProjectDto createProject(ProjectDto projectDto, Long ownerId) {
-        if (projectRepository.existsByOwnerIdAndName(ownerId, projectDto.getName())) {
+    public ProjectResponseDto createProject(CreateProjectRequestDto projectRequestDto, Long ownerId) {
+        if (projectRepository.existsByOwnerIdAndName(ownerId, projectRequestDto.getName())) {
             throw new IllegalArgumentException("Project with the same name already exists for this owner");
         }
 
-        Project project = projectMapper.toEntity(projectDto);
+        Project project = projectMapper.toEntity(projectRequestDto);
         project.setOwnerId(ownerId);
         project.setStatus(ProjectStatus.CREATED);
         project.setCreatedAt(LocalDateTime.now());
         project.setUpdatedAt(LocalDateTime.now());
 
         Project savedProject = projectRepository.save(project);
-
-        return projectMapper.toDto(savedProject);
+        return projectMapper.toResponseDto(savedProject);
     }
 
-    public ProjectDto updateProject(ProjectDto projectDto) {
-        Project existingProject = projectRepository.findById(projectDto.getId())
+    public ProjectResponseDto updateProject(Long projectId, CreateProjectRequestDto projectRequestDto) {
+        Project existingProject = projectRepository.findById(projectId)
                 .orElseThrow(() -> new IllegalArgumentException("Project not found"));
 
-        existingProject.setDescription(projectDto.getDescription());
-        existingProject.setStatus(projectDto.getStatus());
+        existingProject.setDescription(projectRequestDto.getDescription());
+        existingProject.setName(projectRequestDto.getName());
+        existingProject.setVisibility(projectRequestDto.getVisibility());
         existingProject.setUpdatedAt(LocalDateTime.now());
 
         Project updatedProject = projectRepository.save(existingProject);
-
-        return projectMapper.toDto(updatedProject);
+        return projectMapper.toResponseDto(updatedProject);
     }
 
-    public List<ProjectDto> getProjects(String name, ProjectStatus status, Long userId) {
+    public List<ProjectResponseDto> getProjects(String name, ProjectStatus status, Long userId) {
         return projectRepository.findAll().stream()
-                .filter(project -> (name == null || project.getName().contains(name)))
+                .filter(project -> (name == null || (project.getName() != null && project.getName().contains(name))))
                 .filter(project -> (status == null || project.getStatus() == status))
                 .filter(project -> isProjectVisible(project, userId))
-                .map(projectMapper::toDto)
-                .collect(Collectors.toList());
+                .map(projectMapper::toResponseDto)
+                .toList();
     }
 
-    public List<ProjectDto> getAllProjects() {
+    public List<ProjectResponseDto> getAllProjects() {
         return projectRepository.findAll().stream()
-                .map(projectMapper::toDto)
-                .collect(Collectors.toList());
+                .map(projectMapper::toResponseDto)
+                .toList();
     }
 
-    @SneakyThrows
-    public ProjectDto getProjectById(Long projectId, Long userId) {
+    public ProjectResponseDto getProjectById(Long projectId, Long userId) {
         Project project = projectRepository.findById(projectId)
                 .orElseThrow(() -> new IllegalArgumentException("Project not found"));
 
         if (!isProjectVisible(project, userId)) {
-            throw new IllegalAccessException("You don't have access to this project");
+            throw new IllegalArgumentException("You don't have access to this project");
         }
 
-        return projectMapper.toDto(project);
-    }
-
-    public List<ProjectDto> getProjectsByFilter(String name, ProjectStatus status, Long userId) {
-        List<Project> projects = projectRepository.findAll().stream()
-                .filter(project -> (name == null || project.getName().contains(name)))
-                .filter(project -> (status == null || project.getStatus() == status))
-                .filter(project -> (project.getVisibility() == ProjectVisibility.PUBLIC || project.getOwnerId().equals(userId)))
-                .toList();
-
-        return projects.stream()
-                .map(projectMapper::toDto)
-                .toList();
+        return projectMapper.toResponseDto(project);
     }
 
     private boolean isProjectVisible(Project project, Long userId) {
-        if (project.getVisibility() == ProjectVisibility.PUBLIC) {
-            return true;
-        }
-        return project.getOwnerId().equals(userId);
+        return project.getVisibility() == ProjectVisibility.PUBLIC || project.getOwnerId().equals(userId);
     }
 }
